syntax = "proto3";

import "category.proto";

package RpcComm.seller;

service SellerToMarket {
  rpc RegisterSeller (RegisterSellerRequest) returns (RegisterSellerResponse);
  rpc SellItem (SellItemRequest) returns (SellItemResponse);
  rpc UpdateItem (UpdateItemRequest) returns (UpdateItemResponse);
  rpc DeleteItem (DeleteItemRequest) returns (DeleteItemResponse);
  rpc DisplaySellerItems (DisplaySellerItemsRequest) returns (DisplaySellerItemsResponse);
}
  
message RegisterSellerRequest {
  string address = 1;
  string uuid = 2;
}
message RegisterSellerResponse {
  string status = 1;
}

message SellItemRequest {
  string product_name = 1;
  Category category = 2;
  int32 quantity = 3;
  string description = 4;
  string seller_address = 5;
  float price_per_unit = 6;
  string seller_uuid = 7;
      
}
message SellItemResponse {
  string status = 1;
}

message UpdateItemRequest {
  int32 id = 1;
  int32 new_price = 2;
  int32 new_quantity = 3;
  string address = 4;
  string uuid = 5;
}
message UpdateItemResponse {
  string status = 1;
}

message DeleteItemRequest {
  int32 id = 1;
  string address = 2;
  string uuid = 3;
}
message DeleteItemResponse {
  string status = 1;
}

message DisplaySellerItemsRequest {
  string address = 1;
  string uuid = 2;
}
message DisplaySellerItemsResponse {
  string output = 1;
  string status = 2;
}
    